Fix link being not visible

--- a/blocks/core-button/styles.css
+++ b/blocks/core-button/styles.css
@@ -44,7 +44,7 @@
   box-sizing: border-box;
   background-color: transparent !important;
   text-decoration: underline;
-  color: var(--wp--preset--color--c-strong);
+  color: var(--wp--preset--color--c-strong) !important;
   box-shadow: none;
 
   &:hover {
